Fixed bug #43495 (array_merge_recursive() crashes with recursive arrays)