ext/standard/tests/array/bug43495.phpt
@@ -10,12 +10,8 @@ $b["key1"]["key2"]["key3"]=&$b;
 
 array_merge_recursive($a,$b); 
 
-/* Break recursion */
-$a["key1"]["key2"]["key3"] = null;
-$b["key1"]["key2"]["key3"] = null;
-
 echo "Done.\n";
 ?>
 --EXPECTF--
-Warning: array_merge_recursive(): recursion detected in %sbug43495.php on line %d
+Warning: array_merge_recursive(): recursion detected in %s/bug43495.php on line %d
 Done.
